Quicklist: Correctly align header in readonly mode

--- a/src/clr-addons/generic-quick-list/generic-quick-list.scss
+++ b/src/clr-addons/generic-quick-list/generic-quick-list.scss
@@ -94,6 +94,10 @@
       }
     }
 
+    &.readonly-list .header-container {
+      max-width: 100%;
+    }
+
     .header-container {
       display: flex;
       max-width: calc(100% - 42px); // for correct alignment; 42px is the width of trash button in content rows
